modules/lib/qti-to-v2/src/test/resources/org/corespring/qtiToV2/customScoring/badJs/typeError/qti.js
//This will fail
var box1 = alphabet1.value.target1.thing.other;
